Fix h3 alignment in homepage header slider items to bottom-left
Removed top: 32px and unnecessary flex properties (display: flex,
align-content: end, align-self: end) so the h3 naturally positions
at the bottom-left of each slider item card.

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1372,15 +1372,11 @@ body.horizontal-nav main {
         position: absolute;
         font-size: 20px;
         line-height: 20px;
-        top: 32px;
         bottom: 32px;
         left: 32px;
         right: 32px;
         padding: 0;
         z-index: 5;
-        align-content: end;
-        display: flex;
-        align-self: end;
       }
       p {
         text-align: right;
